[tool.poetry]
name = "chronicle"
version = "0.1.0"
description = "Photo Organization and Cataloging Tool"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chronicle"}]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = ">=10.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
ruff = "^0.1.0"
black = "^23.0.0"
pytest = "^7.0.0"

[tool.poetry.scripts]
chronicle = "chronicle.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
